force-app/main/default/objects/Wholesale_Account__c/Wholesale_Account__c.object-meta.xml
<CustomObject>
    <description>Accounts for Wholesale</description>
    <label>Wholesale Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesale Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>