force-app/main/default/objects/Wholesale_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Wholesale account is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>