force-app/main/default/objects/Wholesale_Account__c/fields/Contract_exists__c.field-meta.xml
<CustomField>
    <fullName>Contract_exists__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if a contract exists on the Wholesale account</description>
    <label>Contract exists</label>
    <type>Checkbox</type>
</CustomField>