force-app/main/default/objects/Wholesale_Account__c/fields/Old_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_ID__c</fullName>
    <description>Account ID from old Wholesale org</description>
    <externalId>true</externalId>
    <label>Old Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>