force-app/main/default/objects/Wholesale_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CVR__c</columns>
    <columns>Phone__c</columns>
    <columns>Active__c</columns>
    <columns>Contract_exists__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>