force-app/main/default/objects/Wholesale_Account__c/listViews/All_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Active_Accounts</fullName>
    <columns>NAME</columns>
    <columns>CVR__c</columns>
    <columns>Phone__c</columns>
    <columns>Active__c</columns>
    <columns>Contract_exists__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Accounts</label>
</ListView>